# GeorgianMap

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/tech/: BACKLOG.md  REVIEW-BACKLOG.md  georgia_places_tz.md
docs/tech/adr/: 0000-template.md  0001-monolith-on-single-vps.md  0002-rpo-24h-no-wal-archiving.md  0003-server-gc-with-heap-limit.md  0004-api-versioning-v1-prefix.md  0005-branch-protection-model.md  0006-observability-stack.md  0007-brigading-detection.md  0008-consensus-override-thresholds.md  0009-image-registry-ghcr.md  README.md
source/backend/: .dockerignore  .editorconfig  Directory.Build.props  Directory.Packages.props  GeorgiaPlaces.slnx  README.md
source/backend/src/GeorgiaPlaces.Api/: Dockerfile  GeorgiaPlaces.Api.csproj  ProblemDetailsExceptionHandler.cs  Program.cs  appsettings.json
source/backend/src/GeorgiaPlaces.Application/: DependencyInjection.cs  GeorgiaPlaces.Application.csproj
source/backend/src/GeorgiaPlaces.Domain/: AssemblyMarker.cs  GeorgiaPlaces.Domain.csproj
source/backend/src/GeorgiaPlaces.Infrastructure/: AppDbContext.cs  DependencyInjection.cs  GeorgiaPlaces.Infrastructure.csproj
source/frontend/: README.md  index.html
source/infra/: .env.example  README.md  SECRETS.md  docker-compose.prod.yml  docker-compose.yml
source/infra/nginx/: nginx.conf
source/infra/ofelia/: config.ini
source/infra/postgres/: init.sql
source/infra/scripts/: backup.sh  restore.sh  verify-restore.sh
source/parser/: Dockerfile  README.md  pyproject.toml
source/parser/src/: parser.py
(+26 files in other folders)
