[project]
name = "georgia-places-parser"
version = "0.1.0"
description = "Georgia Places — OSM/Wikidata parser (cron-job)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<0.30",
    "psycopg[binary]>=3.2,<3.3",
    "structlog>=24.4,<26",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RET"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
